# E-commerce

./: .dockerignore  .gitignore  README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  global.css  index.js
client/src/components/bars/: NavBar.jsx
client/src/components/buttons/: AuthButton.jsx
client/src/pages/: Landing.jsx
client/src/pages/auth/: GoogleAuth.jsx  Login.jsx  MetaAuth.js
client/src/styles/global/: navbar.module.css
client/src/utils/axios/: apis.js  conf.js
nginx/: nginx.conf
server/: Dockerfile  conftest.py  docker-compose.local.yml  pyproject.toml  pytest.ini  requirements.txt
server/apis/: celery.py  settings.py  urls.py
server/templates/emails/: verification.html
server/users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
server/users/migrations/: 0001_initial.py  0002_user_is_verified_onetimepasscode.py  0003_remove_user_country_code_remove_user_phone_number_and_more.py  0004_authprovider.py
server/users/tests/: test_user.py
server/users/utils/: user_data_generator.py
