[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["auto <auto>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.3"
python-decouple = "^3.8"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
